--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "rspress dev",
     "dev": "rspress dev",
-    "build": "NODE_OPTIONS=--max-old-space-size=4096 pnpm run build",
+    "build": "NODE_OPTIONS=--max-old-space-size=4096 rspress build",
     "prepare": "husky && pnpm prepare:lynx-compat-data && pnpm prepare:lynx-example-data",
     "gen:living-spec": "node scripts/lynx-living-spec.js",
     "prepare:lynx-compat-data": "rm -rf docs/public/lynx-compat-data && ln -s $(pwd)/packages/lynx-compat-data docs/public/lynx-compat-data",
